[FIND-945] Prevent comparison tab hover covering back button.
This was happening because the button has a box shadow. The
tab mouseover was covering this shadow. Adding a margin to the
button fixes this.

Also improved layout of the map comparison view. This included
adding a "magic number" height which could potentially be
fixed by a flex column layout in a later ticket.

[rev: alex.scown]

--- a/webapp/core/src/main/less/app-include.less
+++ b/webapp/core/src/main/less/app-include.less
@@ -68,7 +68,7 @@
 @locationTabMaxHeight: 750px;
 @locationTabMinHeight: 400px;
 @sunburstHeight: 600px;
-@locationMapMinHeight: 600px;
+@locationMapMinHeight: 300px;
 @middleBoxWrapperHeight: 400px;
 @thumbnailHeight: 55px;
 @findInputHeight: 45px;
@@ -2000,7 +2000,7 @@ input[type=range].range-input-slider {
 }
 
 .location-comparison-map {
-  height: @100percent;
+  height: calc(100vh - 275px);
   min-height: @locationMapMinHeight;
   width: @100percent;
 }
@@ -2058,20 +2058,10 @@ input[type=range].range-input-slider {
   }
 }
 
-.location-comparison-show-more {
-  .m-b-sm;
-  .m-l-sm;
-}
-
 .location-results-map {
-  height: @100percent;
+  height: calc(100vh - 260px);
   min-height: @locationMapMinHeight;
   width: @100percent;
-}
-
-.map-show-more {
-  .m-b-xxs;
-  .m-l-xxs;
 }
 
 .map-loading-spinner {
